# rcommerce

./: .gitignore  AGENTS.md  CLA.md  CODEBASE_REVIEW_TODO.md  CODE_QUALITY_SUMMARY.md  COMPILATION_PROGRESS.md  COMPILATION_RECOVERY_PLAN.md  COMPILATION_RECOVERY_SUMMARY.md  COMPLETION_STATUS.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  CONTRIBUTORS.md  COPYRIGHT.md  Cargo.toml  Cross.toml  DEMONSTRATION.md  DOCUMENTATION_AUDIT.md  Dockerfile.build  EVALUATION_REPORT.md  HTML_TEMPLATE_SUMMARY.md  LICENSE-AGPL  LICENSE-COMMERCIAL  LICENSE.md  MVP_CHECKLIST.md  PHASE_0_SUMMARY.md  PHASE_1_SUMMARY.md  PHASE_2_PROGRESS.md  PHASE_3_5_COMPLETE.md  PHASE_3_8_JOBS.md  PHASE_3_9_PERFORMANCE.md  PHASE_3_PROGRESS.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  README.md  RELEASE_CHECKLIST.md  REMAINING_ISSUES_SUMMARY.md  SECURITY.md  THIRD-PARTY-LICENSES.md  TRADEMARK.md  config.development.toml  (+6 more)
crates/rcommerce/: Cargo.toml
crates/rcommerce-api/: Cargo.toml
crates/rcommerce-api/src/: lib.rs  server.rs  server_tls.rs  state.rs
crates/rcommerce-api/src/middleware/: api_key_auth.rs  mod.rs  scopes.rs
crates/rcommerce-api/src/routes/: admin.rs  auth.rs  cart.rs  checkout.rs  coupon.rs  customer.rs  downloads.rs  dunning.rs  mod.rs  order.rs  payment.rs  payment_v2.rs  product.rs  statistics.rs  subscription.rs  webhook.rs
crates/rcommerce-api/src/routes/admin/: products.rs
crates/rcommerce-api/src/tls/: config.rs  letsencrypt.rs  mod.rs
crates/rcommerce-api/tests/: e2e_test_suite.rs  integration_test.rs  integration_tests.rs  test_reporter.rs
crates/rcommerce-cli/: Cargo.toml
crates/rcommerce-cli/src/: main.rs
crates/rcommerce-cli/src/commands/: email.rs  setup.rs  shell.rs
crates/rcommerce-core/: Cargo.toml
crates/rcommerce-core/migrations/: 001_complete_schema.sql  001_initial_schema.sql  002_carts_and_coupons.sql  002_tax_system.sql  003_demo_products.sql  003_inventory_notifications_fulfillment.sql  004_fix_product_schema.sql  005_api_keys.sql  006_customer_fields.sql  006_subscriptions.sql  008_fix_currency_type.sql  009_add_address_ids.sql  013_statistics_views.sql  015_add_customer_role.sql  016_create_product_categories.sql  017_create_fulfillments.sql  021_fix_coupon_applications_fk.sql  022_digital_products.sql  023_order_downloads.sql  025_fix_all_schema_issues.sql  MIGRATION_SYSTEM_FIX.md
crates/rcommerce-core/migrations/archived/: 001_initial_schema.sql  002_carts_and_coupons.sql  008_add_order_fields.sql  011_add_all_order_columns.sql  012_add_order_item_columns.sql  014_fix_address_columns.sql  018_create_order_notes.sql  019_create_subscription_items.sql  020_create_collections.sql  024_bundle_components.sql  025_fix_all_schema_issues.sql
crates/rcommerce-core/src/: common.rs  config.rs  db.rs  error.rs  lib.rs  traits.rs
crates/rcommerce-core/src/cache/: config.rs  connection.rs  mod.rs  pubsub.rs  rate_limit.rs  session.rs  token.rs
crates/rcommerce-core/src/db/: migrate.rs
crates/rcommerce-core/src/import/: error.rs  mod.rs  types.rs
crates/rcommerce-core/src/import/formats/: csv.rs  json.rs  mod.rs  xml.rs
crates/rcommerce-core/src/inventory/: mod.rs  notification.rs  reservation.rs  service.rs  tests.rs  tracking.rs
crates/rcommerce-core/src/jobs/: config.rs  dead_letter.rs  dunning_job.rs  job.rs  metrics.rs  mod.rs  queue.rs  retry.rs  scheduler.rs  worker.rs
crates/rcommerce-core/src/media/: file_upload.rs  mod.rs
crates/rcommerce-core/src/middleware/: mod.rs  rate_limit.rs
crates/rcommerce-core/src/models/: address.rs  cart.rs  coupon.rs  customer.rs  mod.rs  order.rs  product.rs  subscription.rs
crates/rcommerce-core/src/models/sqlite/: mod.rs
crates/rcommerce-core/src/notification/: README.md  channels.rs  email_templates.rs  mod.rs  service.rs  templates.rs  tests.rs  types.rs
crates/rcommerce-core/src/notification/channels/: email.rs
crates/rcommerce-core/src/notification/templates/: abandoned_cart.html  dunning_final.html  dunning_first.html  dunning_retry.html  integration_test.rs  invoice.html  order_cancelled.html  order_shipped.html  password_reset.html  payment_failed.html  payment_successful.html  refund_processed.html  subscription_cancelled.html  subscription_created.html  subscription_renewal.html  welcome.html
crates/rcommerce-core/src/order/: calculation.rs  fulfillment.rs  lifecycle.rs  mod.rs  service.rs
crates/rcommerce-core/src/payment/: agnostic.rs  dunning.rs  gateways.rs  mod.rs  tests.rs
crates/rcommerce-core/src/payment/gateways/: airwallex.rs  airwallex_agnostic.rs  alipay.rs  alipay_agnostic.rs  mod.rs  (+5 more)
crates/rcommerce-core/src/performance/: benchmark.rs  cache.rs  mod.rs  monitor.rs  optimizer.rs  pool.rs  profiler.rs  query.rs
crates/rcommerce-core/src/repository/: api_key_repository.rs  cart_repository.rs  category_repository.rs  coupon_repository.rs  customer_repository.rs  fulfillment_repository.rs  inventory_repository.rs  mod.rs  notification_repository.rs  order_repository.rs  product_repository.rs  statistics_repository.rs  subscription_repository.rs  tag_repository.rs  traits.rs
crates/rcommerce-core/src/services/: api_key_scopes.rs  auth_service.rs  bundle_service.rs  cart_service.rs  checkout_service.rs  coupon_service.rs  customer_service.rs  digital_product_service.rs  dunning_service.rs  mod.rs  order_service.rs  product_service.rs  statistics_service.rs  subscription_service.rs
crates/rcommerce-core/src/shipping/: calculation.rs  mod.rs  packaging.rs  rules.rs  zones.rs
crates/rcommerce-core/src/tax/: calculator.rs  mod.rs  models.rs  providers.rs  service.rs  vat_validation.rs
crates/rcommerce-core/src/websocket/: auth.rs  broadcast.rs  config.rs  connection.rs  manager.rs  message.rs  mod.rs  pubsub.rs  rate_limit.rs
crates/rcommerce-core/tests/: payment_integration_tests.rs  run_payment_tests.sh  wechatpay_integration_tests.rs
crates/rcommerce-demo/: Cargo.toml  README.md
crates/rcommerce-demo-server/: Cargo.toml  README.md
crates/rcommerce-demo-server/src/: cache.rs  main.rs
crates/rcommerce-demo/src/: main.rs
crates/rcommerce/src/: main.rs
(+332 files in other folders)
