[package]
name = "rcommerce-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[dependencies]
# Core types
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# Numbers
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Async
tokio = { workspace = true }

# Database types
sqlx = { workspace = true }

# Validation
validator = { workspace = true }

# Pagination
ulid = { workspace = true }

# Async trait
async-trait = { workspace = true }

# Logging
log = { workspace = true }

# HTTP
axum = { workspace = true }
http = { workspace = true }

# HTTP client (for external services)
reqwest = { workspace = true }

# Regex for validation
regex = { workspace = true }
lazy_static = { workspace = true }

# Configuration
toml = { workspace = true }

# Crypto
sha2 = { workspace = true }
hex = { workspace = true }
hmac = "0.12"
rand = { workspace = true }
base64 = { workspace = true }
rsa = { version = "0.9", features = ["pem", "sha2"] }

# System monitoring
sysinfo = { workspace = true }

# Lazy initialization
once_cell = { workspace = true }

# WebSocket support
tokio-tungstenite = { workspace = true }
futures = { workspace = true }

# Redis caching (1.0 stable)
redis = { version = "1.0", default-features = false, features = ["tokio-rustls-comp", "connection-manager", "cluster-async"] }

# Concurrent data structures
dashmap = { workspace = true }
arc-swap = { workspace = true }

# URL parsing
url = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Job scheduling
cron = { workspace = true }

# Crypto for JWT
jsonwebtoken = { workspace = true }
jwt-simple = { workspace = true }

# Time utilities
time = { workspace = true }

# Email templating
handlebars = { workspace = true }

# LRU Cache support  
lru = "0.12"

[features]
default = []
integration-tests = []
