[package]
name = "rcommerce-demo-server"
version = "0.2.0"
edition = "2021"
description = "Dynamic frontend server with SSR, routing, and edge caching"
license = "AGPL-3.0"

[[bin]]
name = "rcommerce-frontend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "compression-gzip", "compression-br"] }

# Template engine
tera = { version = "1.19", default-features = false }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Config
config = "0.14"
toml = "0.8"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde", "clock"] }

# MIME types
mime_guess = "2.0"

# Caching
lru = "0.12"
bincode = "1.3"
async-trait = "0.1"

# File watching (for dev mode)
notify = { version = "6.1", optional = true }

# Markdown
pulldown-cmark = { version = "0.9", optional = true }

[features]
default = ["dev-reload"]
dev-reload = ["notify"]
markdown = ["pulldown-cmark"]

[dev-dependencies]
tokio-test = "0.4"
